# air_quality_monitor

./: .gitignore  Containerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
cloud-terraform/: main.tf  providers.tf
src/: cities.py  main.py
terraform/: .terraform.lock.hcl  db.tf  main.tf  output.tf  variables.tf
