[tool.poetry]
name = "air-quality-monitor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
requests = "^2.31.0"
pandas = "^2.1.4"
prefect = "^2.14.13"
prefect-sqlalchemy = "^0.3.2"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
